fix: mobile rich text (#319)
* feat(wip): q3 api endpoint for uploads

* fix: overflow

* style: label translations

--- a/packages/q3-ui-rte/src/components/RichTextEditor/RichTextEditor.stories.mdx
+++ b/packages/q3-ui-rte/src/components/RichTextEditor/RichTextEditor.stories.mdx
@@ -11,8 +11,10 @@ import {
   Box,
   Grid,
   Typography,
+  Dialog,
 } from '@material-ui/core';
 import RichTextEditor from './RichTextEditor';
+import { toQ3Api } from '../../adapters';
 
 <Meta title="RichTextEditor" component={RichTextEditor} />
 
@@ -24,7 +26,7 @@ import RichTextEditor from './RichTextEditor';
     <Box my={4}>
       <Container>
         <Paper>
-          <RichTextEditor />
+          <RichTextEditor upload={toQ3Api('/foo')} />
         </Paper>
       </Container>
     </Box>
@@ -37,23 +39,25 @@ import RichTextEditor from './RichTextEditor';
         overflow: 'hidden',
       }}
     >
-      <RichTextEditor id="testing" autofocus>
-        <Container maxWidth="xl">
-          <Grid container justify="space-between">
-            <Grid item>
-              <Typography variant="h6">
-                Document title
-              </Typography>
+      <Dialog fullScreen open>
+        <RichTextEditor id="testing" autofocus>
+          <Container maxWidth="xl">
+            <Grid container justify="space-between">
+              <Grid item>
+                <Typography variant="h6">
+                  Document title
+                </Typography>
+              </Grid>
+              <Grid item>
+                <Button>Discard</Button>
+                <Button variant="contained" color="primary">
+                  Publish
+                </Button>
+              </Grid>
             </Grid>
-            <Grid item>
-              <Button>Discard</Button>
-              <Button variant="contained" color="primary">
-                Publish
-              </Button>
-            </Grid>
-          </Grid>
-        </Container>
-      </RichTextEditor>
+          </Container>
+        </RichTextEditor>
+      </Dialog>
     </Paper>
   </Story>
   <Story name="Default value">
