--- a/packages/q3-ui-rte/src/components/RichTextEditor/RichTextEditor.stories.mdx
+++ b/packages/q3-ui-rte/src/components/RichTextEditor/RichTextEditor.stories.mdx
@@ -61,7 +61,7 @@ import { toQ3Api } from '../../adapters';
     </Paper>
   </Story>
   <Story name="Default value">
-    <RichTextEditor defaultValue="<h2><strong>Hello world</strong></h2><img src='https://images.unsplash.com/photo-1618799805265-4f27cb61ede9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=675&q=80'/><p>This is a new sentence.</p>">
+    <RichTextEditor defaultValue="<h2><strong>Hello world</strong></h2><img alt='TEST' style='width: 150px' src='https://images.unsplash.com/photo-1618799805265-4f27cb61ede9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=675&q=80'/><p>This is a new sentence.</p>">
       <Button>Publish</Button>
     </RichTextEditor>
   </Story>
