test: date formatting

--- a/packages/q3-ui-comments/src/Comments/Comments.stories.mdx
+++ b/packages/q3-ui-comments/src/Comments/Comments.stories.mdx
@@ -3,21 +3,20 @@ import {
   Story,
   Preview,
 } from '@storybook/addon-docs/blocks';
-import {
-  Button,
-  Container,
-  Paper,
-  Box,
-  Grid,
-  Typography,
-  Dialog,
-} from '@material-ui/core';
+import { Container } from '@material-ui/core';
 import Comments from './Comments';
 import Fixture from '../../tests/fixtures';
 
 <Meta title="Comments" component={Comments} />
 
 <Preview>
+  <Story name="Populated">
+    <Container style={{ margin: '2rem auto' }}>
+      <Fixture>
+        <Comments />
+      </Fixture>
+    </Container>
+  </Story>
   <Story name="Loading">
     <Fixture delay={10000}>
       <Comments />
