style(wip): move searchbar and commenting icons

--- a/packages/q3-ui-comments/src/Comments/Comments.stories.mdx
+++ b/packages/q3-ui-comments/src/Comments/Comments.stories.mdx
@@ -27,4 +27,9 @@ import Fixture from '../../tests/fixtures';
       <Comments />
     </Fixture>
   </Story>
+  <Story name="Additional fields">
+    <Fixture>
+      <Comments additionalFields={<div>Fields</div>} />
+    </Fixture>
+  </Story>
 </Preview>
