chore: added props to cart and field

--- a/packages/q3-ui-cart/tests/Cart.stories.mdx
+++ b/packages/q3-ui-cart/tests/Cart.stories.mdx
@@ -45,6 +45,9 @@ import Provider, {
               <Card style={{ width: 350 }}>
                 <CardContent>
                   <AddToCart
+                    AddToCartButtonProps={{
+                      companion: true,
+                    }}
                     product="abc"
                     variant="spread"
                     size="small"
