chore: use previous values

--- a/packages/q3-ui-audit/src/components/Audit/Audit.stories.mdx
+++ b/packages/q3-ui-audit/src/components/Audit/Audit.stories.mdx
@@ -12,17 +12,6 @@ import fixtures from '../../tests/fixtures/data';
 
 <Preview>
   <Story name="Default">
-    <Audit
-      current={{
-        'name': 'Pear',
-        'related': [
-          {
-            'id': '123',
-            'name': 'Blue',
-          },
-        ],
-      }}
-      data={fixtures}
-    />
+    <Audit data={fixtures} />
   </Story>
 </Preview>
