chore: add filtering capabilities to audit trail

--- a/packages/q3-ui-audit/src/components/Audit/Audit.stories.mdx
+++ b/packages/q3-ui-audit/src/components/Audit/Audit.stories.mdx
@@ -6,12 +6,14 @@ import {
 } from '@storybook/addon-docs/blocks';
 import Audit from './Audit';
 import { Box } from '@material-ui/core';
-import fixtures from '../../tests/fixtures/data';
+import Fixtures from '../../tests/fixtures';
 
 <Meta title="Audit" component={Audit} />
 
 <Preview>
   <Story name="Default">
-    <Audit data={fixtures} />
+    <Fixtures>
+      <Audit />
+    </Fixtures>
   </Story>
 </Preview>
