refactor: cleanup new package before testing

--- a/packages/q3-ui-audit/src/components/Audit/Audit.stories.mdx
+++ b/packages/q3-ui-audit/src/components/Audit/Audit.stories.mdx
@@ -13,7 +13,7 @@ import Fixtures from '../../tests/fixtures';
 <Preview>
   <Story name="Default">
     <Fixtures>
-      <Audit />
+      <Audit collectionName="testing" />
     </Fixtures>
   </Story>
 </Preview>
