--- a/packages/q3-ui-audit/src/components/Audit/Audit.stories.mdx
+++ b/packages/q3-ui-audit/src/components/Audit/Audit.stories.mdx
@@ -16,4 +16,24 @@ import Fixtures from '../../tests/fixtures';
       <Audit collectionName="testing" />
     </Fixtures>
   </Story>
+  <Story name="Empty">
+    <Fixtures returnEmpty>
+      <Audit collectionName="testing" />
+    </Fixtures>
+  </Story>
+  <Story name="Error">
+    <Fixtures causeError>
+      <Audit collectionName="testing" />
+    </Fixtures>
+  </Story>
+  <Story name="Unauthorized">
+    <Fixtures revokeAccessToAudit>
+      <Audit collectionName="testing" />
+    </Fixtures>
+  </Story>
+  <Story name="Unauthorized (Just user dropdown)">
+    <Fixtures revokeAccessToUsers>
+      <Audit collectionName="testing" />
+    </Fixtures>
+  </Story>
 </Preview>
