test: unit test emaileditor components

--- a/packages/q3-ui-emaileditor/src/components/EmailEditor/EmailEditor.stories.mdx
+++ b/packages/q3-ui-emaileditor/src/components/EmailEditor/EmailEditor.stories.mdx
@@ -18,4 +18,11 @@ import Fixtures from '../../tests/fixtures';
       </div>
     </Fixtures>
   </Story>
+  <Story name="Error">
+    <Fixtures causeError>
+      <div style={{ height: '100vh' }}>
+        <EmailEditor />
+      </div>
+    </Fixtures>
+  </Story>
 </Preview>
