style: admin navigation for addons

--- a/packages/q3-admin/__fixtures__/App.stories.mdx
+++ b/packages/q3-admin/__fixtures__/App.stories.mdx
@@ -11,12 +11,6 @@ import App from './App';
 # Q3
 
 <Preview>
-  <Story name="Dashboard">
-    <App initialPath="/" />
-  </Story>
-</Preview>
-
-<Preview>
   <Story name="List">
     <App initialPath="/shows" />
   </Story>
@@ -37,5 +31,11 @@ import App from './App';
 <Preview>
   <Story name="Profile">
     <App initialPath="/account/profile" />
+  </Story>
+</Preview>
+
+<Preview>
+  <Story name="Addons:Email">
+    <App initialPath="/emaileditor" />
   </Story>
 </Preview>
