--- a/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
+++ b/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
@@ -85,9 +85,7 @@ export const isSeq = (item) => Number(item.seq) === 211;
     <LocationProvider>
       <Repeater
         bulkEditorComponent={<p>Bulk editor</p>}
-        renderNestedTableRow={() => (
-          <p>{console.log('MOUNTED')} Check me out</p>
-        )}
+        renderNestedTableRow={() => <p>d</p>}
         perPage={50}
         groupBy={[
           { label: 'Expensive', fn: (v) => v.price > 50 },
