refactor: allow custom button

--- a/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
+++ b/packages/q3-ui-repeater/__fixtures__/stories/Repeater.stories.mdx
@@ -131,6 +131,10 @@ export const isSeq = (item) => Number(item.seq) === 211;
               icon: LaunchIcon,
               label: 'to',
             },
+            {
+              disableDialog: true,
+              component: (props) => <button>Custom</button>,
+            },
           ],
           attributes: ['price', 'category'],
           editable: {
