chore: setup fixtures and stories

--- a/packages/q3-admin/__fixtures__/App.stories.mdx
+++ b/packages/q3-admin/__fixtures__/App.stories.mdx
@@ -39,3 +39,9 @@ import App from './App';
     <App initialPath="/emaileditor" />
   </Story>
 </Preview>
+
+<Preview>
+  <Story name="Addons:Queues">
+    <App initialPath="/queues" />
+  </Story>
+</Preview>
