--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -121,7 +121,12 @@ import { Authorization } from '../__fixtures__';
             })}
           />
           <Repeater group="repeats">
-            <Field name="fruit" type="text" />
+            <Field
+              name="fruit"
+              type="text"
+              xl={12}
+              lg={12}
+            />
           </Repeater>
         </Form>
       </Container>
