chore: refresh calendar on search change

--- a/packages/q3-admin/__fixtures__/App.stories.mdx
+++ b/packages/q3-admin/__fixtures__/App.stories.mdx
@@ -11,8 +11,14 @@ import App from './App';
 # Q3
 
 <Preview>
-  <Story name="List">
+  <Story name="Table">
     <App initialPath="/shows" />
+  </Story>
+</Preview>
+
+<Preview>
+  <Story name="Calendar">
+    <App initialPath="/characters" />
   </Story>
 </Preview>
 
