--- a/packages/q3-ui-filters/src/components/Filters/Filters.stories.mdx
+++ b/packages/q3-ui-filters/src/components/Filters/Filters.stories.mdx
@@ -21,7 +21,7 @@ import Filters from './Filters';
       <LocationDebugger>
         <Box p={2} maxWidth={320}>
           <Datasource>
-            <Filters />
+            <Filters collectionName="test" />
           </Datasource>
         </Box>
       </LocationDebugger>
@@ -32,7 +32,7 @@ import Filters from './Filters';
       <LocationDebugger>
         <Box p={2} maxWidth={320}>
           <Datasource>
-            <Filters data={schema} />
+            <Filters collectionName="test" data={schema} />
           </Datasource>
         </Box>
       </LocationDebugger>
