feat(wip): in-app text editting

--- a/packages/q3-admin/__fixtures__/App.stories.mdx
+++ b/packages/q3-admin/__fixtures__/App.stories.mdx
@@ -51,3 +51,9 @@ import App from './App';
     <App initialPath="/queues" />
   </Story>
 </Preview>
+
+<Preview>
+  <Story name="System">
+    <App initialPath="/system" />
+  </Story>
+</Preview>
