style(wip): system rountes and nav

--- a/packages/q3-admin/__fixtures__/App.stories.mdx
+++ b/packages/q3-admin/__fixtures__/App.stories.mdx
@@ -41,19 +41,25 @@ import App from './App';
 </Preview>
 
 <Preview>
-  <Story name="Addons:Email">
-    <App initialPath="/emaileditor" />
-  </Story>
-</Preview>
-
-<Preview>
-  <Story name="Addons:Queues">
-    <App initialPath="/queues" />
-  </Story>
-</Preview>
-
-<Preview>
   <Story name="System">
     <App initialPath="/system" />
+  </Story>
+</Preview>
+
+<Preview>
+  <Story name="System I18n">
+    <App initialPath="/system/i18n" />
+  </Story>
+</Preview>
+
+<Preview>
+  <Story name="System Email">
+    <App initialPath="/system/emails" />
+  </Story>
+</Preview>
+
+<Preview>
+  <Story name="System Queues">
+    <App initialPath="/system/queues" />
   </Story>
 </Preview>
