feat: system pages

--- a/packages/q3-admin/__fixtures__/App.stories.mdx
+++ b/packages/q3-admin/__fixtures__/App.stories.mdx
@@ -29,14 +29,14 @@ import App from './App';
 </Preview>
 
 <Preview>
-  <Story name="Password">
-    <App initialPath="/account/change-password" />
+  <Story name="Profile">
+    <App initialPath="/account" />
   </Story>
 </Preview>
 
 <Preview>
-  <Story name="Profile">
-    <App initialPath="/account/profile" />
+  <Story name="Password">
+    <App initialPath="/account/change-password" />
   </Story>
 </Preview>
 
