refactor: remove component overwrites in app props

--- a/packages/q3-admin/__fixtures__/App.stories.mdx
+++ b/packages/q3-admin/__fixtures__/App.stories.mdx
@@ -35,7 +35,13 @@ import App from './App';
 </Preview>
 
 <Preview>
-  <Story name="Password">
+  <Story name="Profile notifications">
+    <App initialPath="/account/notifications" />
+  </Story>
+</Preview>
+
+<Preview>
+  <Story name="Profile password">
     <App initialPath="/account/change-password" />
   </Story>
 </Preview>
